config change to url setting

--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,29 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+
+
+minimal_mistakes_skin    : "aqua" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+# Site Settings
+locale                   : "en-US"
+title                    : "A Developer Blog"
+title_separator          : "-"
+subtitle                 : # site tagline that appears below site title in masthead
+name                     : "Gopakumar Sasi"
+description              : "Developer."
+url                      : "https://gopakumar.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : "gopakumar/gopakumar.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser                   : #/assets/images/fallback.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+# breadcrumbs            : false # true, false (default)
+words_per_minute         : 100
+
+#twitter_username: username
+#github_username: username
+
 search: true
 
 # Build settings
