--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ minimal_mistakes_skin    : "aqua" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "en-US"
 title                    : "A Developer Blog"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : :. # site tagline that appears below site title in masthead
 name                     : "Gopakumar Sasi"
-description              : "Developer."
+description              : #"Developer."
 url                      : "https://gopakumar.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "gopakumar/gopakumar.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
